<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn"
            android:padding="14dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/bipeople_circle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wira"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomor"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/shape"
                android:text="@string/view"
                android:textAllCaps="false"
                android:textColor="@color/white">
            </androidx.appcompat.widget.AppCompatButton>

            <LinearLayout
                android:background="@drawable/rounded_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/nightmode"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/solarmoon_bold"
                        android:background="@drawable/night_mode"/>

                    <TextView
                        android:layout_toEndOf="@+id/nightmode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/text"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/nightModeSwitch"/>

                </RelativeLayout>
                <!-- Dark Light   -->
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/nightmode2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/ionnotifcations"
                        android:background="@drawable/rounded_private_account"/>

                    <TextView
                        android:layout_toEndOf="@+id/nightmode2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/notif"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/nightModeSwitch"/>

                </RelativeLayout>
                <!--Dark Light   -->
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/nightmode3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/material_symbolslock"
                        android:background="@drawable/rounded_back_notifications"/>

                    <TextView
                        android:layout_toEndOf="@+id/nightmode3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/pivate"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/nightModeSwitch"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/rounded_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/nightmode7"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/solarmoon_bold"
                        android:background="@drawable/pengaturan"/>

                    <TextView
                        android:layout_toEndOf="@+id/nightmode7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/Security"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_navigate_next_24"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/nightmode8"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/formkittext"
                        android:background="@drawable/textsize"/>

                    <TextView
                        android:layout_toEndOf="@+id/nightmode8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/size"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_navigate_next_24"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/nightmode9"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/material_symbolslanguage"
                        android:background="@drawable/language"/>

                    <TextView
                        android:layout_toEndOf="@+id/nightmode9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/languages"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_navigate_next_24"/>

                </RelativeLayout>
            </LinearLayout>

        <LinearLayout
            android:background="@drawable/rounded_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="15sp">

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/nightmode10"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="12dp"
                    android:src="@drawable/material_symbolslanguage"
                    android:background="@drawable/send"/>

                <TextView
                    android:layout_toEndOf="@+id/nightmode10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_navigate_next_24"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/nightmode11"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="12dp"
                    android:src="@drawable/mdiabout"
                    android:background="@drawable/rounded_back_notifications"/>

                <TextView
                    android:layout_toEndOf="@+id/nightmode11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/l"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_navigate_next_24"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/nightmode12"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="12dp"
                    android:src="@drawable/vector"
                    android:background="@drawable/faqs"/>

                <TextView
                    android:layout_toEndOf="@+id/nightmode12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/faqs"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_navigate_next_24"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/rounded_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="15sp">

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/nightmode14"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="12dp"
                    android:src="@drawable/vector"
                    android:background="@drawable/faqs"/>

                <TextView
                    android:layout_toEndOf="@+id/nightmode14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_navigate_next_24"/>

            </RelativeLayout>

        </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>